--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -48,7 +48,7 @@
   <h4><%= image_tag @icon_image, class: "icon" %><%= t("sidebar.blog_link") %></h4>
   <ul class="nav nav-list">
     <% @blog_links.each do |blog_link| %>
-      <li><a href=<%= blog_link.url %> target="_blank" rel="tooltip" data-original-title=<%= blog_link.author + I18n.t("blog_link.prefix") + "：" + blog_link.introduction %>><%= blog_link.title %></a></li>
+      <li><a href=<%= blog_link.url %> target="_blank" rel="tooltip" data-original-title=<%= blog_link.author + I18n.t("blog_link.prefix") + "：" + blog_link.introduction %> data-placement="left"><%= blog_link.title %></a></li>
     <% end %>
   </ul>
 </div>
