refs #130 : 濃い色に調整

--- a/app/views/blog_comments/_blog_comment.html.erb
+++ b/app/views/blog_comments/_blog_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="blog_comment">
-  <table class="table">
+  <table class="table well-comment">
 <% if blog_comment.admin %>
   <tr>
     <td><%= t(".admin") %></td>
