--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -56,6 +56,11 @@
         margin-bottom: 10px;
         color: #1a331a;
       }
+
+      .well-comment {
+        background-color:rgba(225,245,225,0.4);
+        border: 1px solid #f0fff0;
+      }
     }
 
     .table {
